--- a/client/src/pages/home/homeStyle.css
+++ b/client/src/pages/home/homeStyle.css
@@ -73,25 +73,9 @@
     margin: auto;
   
   }
-.upload_progress{
-    width: calc(100% - 20px);
-    height: 50px;
-    background-color: rgb(255, 255, 255);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-top: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-    border-radius: 5px;
-}
+
 #uploading{
     width: 100%;
-    
 }
 #progress_label{
     font-weight: 700;
